# mailarchiver-ng

./: .dockerignore  .env.example  .env.ha.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.ha.yml  docker-compose.yml
.github/workflows/: ci.yml
deploy/backup/: README.md  backup.sh  restore.sh
deploy/db/: partitioning.sql
deploy/ha/: README.md
deploy/k8s/: archiver-worker.yaml  keda-scaledobject.yaml
deploy/monitoring/: alertmanager.yml  alerts.yml  docker-compose.monitoring.yml  prometheus.yml
docs/: ARCHITECTURE.md  CODE.md  FONCTIONNALITES.md  PRODUCTION.md  TESTS.md
libs/mailarchiver_common/: pyproject.toml
libs/mailarchiver_common/mailarchiver_common/: __init__.py  config.py  crypto.py  fetch.py  logging.py  models.py  queue.py  storage.py
loadtest/: inject.py  inject_large.py  inject_pj.py  measure.sh  test_ingestion.py
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 0001_baseline.py  0002_security_columns.py
services/api/: Dockerfile  pyproject.toml
services/api/api/: audit.py  auth.py  fetch_sources.py  fixtures.py  i18n.py  mail_access.py  main.py  search.py  settings_store.py  smtp_relay.py  tokens.py  transfer_jobs.py  users.py
services/archiver-worker/: Dockerfile  pyproject.toml
services/archiver-worker/archiver_worker/: indexer.py  main.py  parser.py  pipeline.py
services/fetch-worker/: Dockerfile  pyproject.toml
services/fetch-worker/fetch_worker/: main.py
services/retention-worker/: Dockerfile  pyproject.toml
services/retention-worker/retention_worker/: main.py
services/smtp-gateway/: Dockerfile  pyproject.toml
services/smtp-gateway/smtp_gateway/: handler.py  main.py
services/web/: Dockerfile  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  vite.config.js
services/web/src/: App.vue  api.js  i18n.js  main.js  style.css
services/web/src/components/: AccountView.vue  LiveView.vue  LoginView.vue  MessageModal.vue  SearchView.vue  SettingsView.vue  SourcesView.vue  UsersView.vue
tests/: nonreg.py  test_crypto.py
