[project]
name = "mailarchiver-common"
version = "0.1.0"
description = "Code partagé entre les services MailArchiver-NG"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    "aio-pika>=9.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aioboto3>=12.3",
    "opensearch-py>=2.6",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mailarchiver_common"]
