[project]
name = "mailarchiver-api"
version = "0.1.0"
description = "API REST : recherche, export/import EML, forward SMTP, auth AD/LDAP, i18n, audit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "opensearch-py>=2.6",
    "ldap3>=2.9",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "aiosmtplib>=3.0",
    "python-multipart>=0.0.9",
    "Babel>=2.14",
    "structlog>=24.1",
    "mailarchiver-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
