[project]
name = "archiver-worker"
version = "0.1.0"
description = "Pipeline d'archivage : parse, dédup, compression, chiffrement, signature, indexation"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4",
    "opensearch-py>=2.6",
    "structlog>=24.1",
    "mailarchiver-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archiver_worker"]
