[project]
name = "fetch-worker"
version = "0.1.0"
description = "Collecte planifiée des sources IMAP/POP3 vers la file d'archivage"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "aio-pika>=9.4",
    "structlog>=24.1",
    "mailarchiver-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fetch_worker"]
