[project]
name = "retention-worker"
version = "0.1.0"
description = "Application planifiée des politiques de conservation (purge + GC des blobs dédupliqués)"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "opensearch-py>=2.6",
    "structlog>=24.1",
    "mailarchiver-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["retention_worker"]
