[project]
name = "smtp-gateway"
version = "0.1.0"
description = "Passerelle SMTP (STARTTLS) — reçoit les mails et les spoole dans la queue"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd>=1.4.6",
    "aio-pika>=9.4",
    "structlog>=24.1",
    "mailarchiver-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smtp_gateway"]
